--- a/astro-sample/package.json
+++ b/astro-sample/package.json
@@ -9,7 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.2.1",
+    "@tabler/icons": "^3.26.0",
     "astro": "^5.1.0",
-    "astro-icon": "^1.1.4"
+    "astro-icon": "^1.1.4",
+    "tabler-icons": "^1.35.0"
   }
 }
